--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
+<!doctype html>
+<html>
 
-<embed width="1024" height="800" src="JOB-10-7-15.pdf" type="application/pdf"></embed>
+<head>
+  <!-- test -->
+  
+</head>  
+
+<body>
+  <embed width="1024" height="800" src="JOB-10-7-15.pdf" type="application/pdf"></embed>
+  
+</body>
+
+</html>
